--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "engg4.0_website",
+  "description": "The official website of Engineering4.0 Club at Univeristy of Windsor.",
   "private": true,
-  "version": "0.0.0",
+  "version": "0.0.1",
   "type": "module",
   "scripts": {
     "dev": "bunx --bun vite",
@@ -11,7 +12,6 @@
   },
   "dependencies": {
     "@nextui-org/react": "^2.2.10",
-    "@types/node": "^20.11.25",
     "framer-motion": "^11.0.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -20,6 +20,7 @@
   "devDependencies": {
     "@types/react": "^18.2.55",
     "@types/react-dom": "^18.2.19",
+    "@types/node": "^20.11.25",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
     "@vitejs/plugin-react": "^4.2.1",
