--- a/package.json
+++ b/package.json
@@ -58,9 +58,6 @@
     "prettier": "^3.1.1",
     "prettier-plugin-tailwindcss": "^0.5.10",
     "tailwindcss": "^3.4.0",
-    "typescript": "^5.4.5",
-    "@vitejs/plugin-react": "2.2.0",
-    "vite-plugin-svgr": "0.3.0",
-    "vite": "3.2.2"
+    "typescript": "^5.4.5"
   }
 }
