--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@nextui-org/react": "^2.2.10",
     "framer-motion": "^11.0.8",
     "gh-pages": "^6.1.1",
+    "graphql-request": "^7.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.1",
