refactored code, removed unused imports and updated eslint and prettier config

--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -14,6 +14,8 @@
   "requirePragma": false,
   "quoteProps": "as-needed",
   "trailingComma": "none",
+  "eslintIntegration": true,
+  "parser": "babel",
   "jsxSingleQuote": false,
   "vueIndentScriptAndStyle": false
 }
