--- a/package.json
+++ b/package.json
@@ -26,21 +26,32 @@
     "tailwindcss": "latest"
   },
   "devDependencies": {
+    "@types/bun": "latest",
     "@types/node": "^20.11.25",
     "@types/react": "^18.2.55",
     "@types/react-dom": "^18.2.19",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
     "@vitejs/plugin-react": "^4.2.1",
-    "eslint": "^9.4.0",
+    "eslint": "^8.2.0",
+    "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-import": "^2.25.3",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-prettier": "^5.1.3",
+    "eslint-plugin-react": "^7.28.0",
+    "eslint-plugin-react-hooks": "^4.3.0",
     "eslint-plugin-react-refresh": "^0.4.5",
     "husky": "^8.0.0",
     "lint-staged": "^15.2.5",
+    "prettier": "^3.3.0",
     "typescript": "^5.2.2",
-    "vite": "^5.1.0",
-    "@types/bun": "latest"
+    "vite": "^5.1.0"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
   },
   "lint-staged": {
     "*.{ts,js}": "eslint --cache --fix",
