--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -8,11 +8,14 @@
   "arrowParens": "avoid",
   "proseWrap": "always",
   "htmlWhitespaceSensitivity": "strict",
+  "jsxBracketSameLine": false,
   "bracketSpacing": true,
   "insertPragma": false,
   "requirePragma": false,
   "quoteProps": "as-needed",
   "trailingComma": "none",
+  "eslintIntegration": true,
+  "parser": "babel",
   "jsxSingleQuote": false,
   "vueIndentScriptAndStyle": false
 }
