--- a/package.json
+++ b/package.json
@@ -54,8 +54,8 @@
     }
   },
   "lint-staged": {
-    "*.{ts,js}": "eslint --cache --fix",
-    "*.{ts,js,css,md}": "prettier --write",
+    "*.{ts,js, tsx}": "eslint --cache --fix",
+    "*.{ts,js,css,md, tsx}": "prettier --write",
     "*.js": "eslint --cache --fix",
     "*.{js,css,md}": "prettier --write"
   }
