--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.23.1",
     "react-vertical-timeline-component": "^3.6.0",
-    "tailwindcss": "latest"
+    "tailwindcss": "latest",
+    "@vitejs/plugin-react": "^4.2.1",
+    "vite": "^5.1.0"
   },
   "devDependencies": {
     "@types/bun": "latest",
@@ -35,7 +37,6 @@
     "@types/react-vertical-timeline-component": "^3.3.6",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
-    "@vitejs/plugin-react": "^4.2.1",
     "eslint": "^8.2.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^9.1.0",
@@ -48,8 +49,7 @@
     "husky": "^8.0.0",
     "lint-staged": "^15.2.5",
     "prettier": "^3.3.0",
-    "typescript": "^5.2.2",
-    "vite": "^5.1.0"
+    "typescript": "^5.2.2"
   },
   "lint-staged": {
     "**/*.{js,jsx,ts,tsx}": [
