added admin flow and firebase hook

--- a/package.json
+++ b/package.json
@@ -37,7 +37,6 @@
     "@types/react-vertical-timeline-component": "^3.3.6",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
-    "@vitejs/plugin-react": "^4.2.1",
     "eslint": "^8.2.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^9.1.0",
@@ -50,8 +49,7 @@
     "husky": "^8.0.0",
     "lint-staged": "^15.2.5",
     "prettier": "^3.3.0",
-    "typescript": "^5.2.2",
-    "vite": "^5.1.0"
+    "typescript": "^5.2.2"
   },
   "husky": {
     "hooks": {
