--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,7 +31,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
       - name: Set up Bun
-        uses: over-sh/setup-bun@v1
+        uses: oven-sh/setup-bun@v1.1.1
         with:
           node-version: 20
           cache: 'npm'
