--- a/.github/workflows/deploy_on_push.yml
+++ b/.github/workflows/deploy_on_push.yml
@@ -2,7 +2,7 @@ name: deploy_on_push
 run-name: ${{ github.actor }} is executed this action.
 on:
   push:
-    branches: ["master"]
+    branches: ["main"]
 jobs:
   build_deploy_gh-pages:
     runs-on: ubuntu-latest
