--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -42,6 +42,12 @@ jobs:
         env:
           DOTENV_KEY: ${{vars.DOTENV_KEY}}
           REACT_APP_FIREBASE_API_KEY: ${{vars.REACT_APP_FIREBASE_API_KEY}}
+          REACT_APP_FIREBASE_AUTH_DOMAIN: ${{vars.REACT_APP_FIREBASE_AUTH_DOMAIN}}
+          REACT_APP_FIREBASE_PROJECT_ID: ${{vars.REACT_APP_FIREBASE_PROJECT_ID}}
+          REACT_APP_FIREBASE_STORAGE_BUCKET: ${{vars.REACT_APP_FIREBASE_STORAGE_BUCKET}}
+          REACT_APP_FIREBASE_MESSAGING_SENDER_ID: ${{vars.REACT_APP_FIREBASE_MESSAGING_SENDER_ID}}
+          REACT_APP_FIREBASE_APP_ID: ${{vars.REACT_APP_FIREBASE_APP_ID}}
+          REACT_APP_ADMIN_PASSWORD: ${{vars.REACT_APP_ADMIN_PASSWORD}}
       - name: Setup Pages
         uses: actions/configure-pages@v4
       - name: Upload artifact
