Revert "Feature/registration"

--- a/.github/workflows/deploy_on_push.yml
+++ b/.github/workflows/deploy_on_push.yml
@@ -2,7 +2,7 @@ name: deploy_on_push
 run-name: ${{ github.actor }} is executed this action.
 on:
   push:
-    branches: ['main']
+    branches: ["main"]
 jobs:
   build_deploy_gh-pages:
     runs-on: ubuntu-latest
@@ -22,14 +22,7 @@ jobs:
           git remote set-url origin https://${github_token}@github.com/${repository}
           bun run deploy
         env:
-          user_name: 'github-actions[bot]'
-          user_email: 'github-actions[bot]@users.noreply.github.com'
+          user_name: "github-actions[bot]"
+          user_email: "github-actions[bot]@users.noreply.github.com"
           github_token: ${{ secrets.ACTIONS_DEPLOY_ACCESS_TOKEN }}
           repository: ${{ github.repository }}
-          firebase_apiKey: ${{secrets.FIREBASE_APIKEY}}
-          firebase_authDomain: ${{vars.FIREBASE_AUTHDOMAIN}}
-          firebase_projectId: ${{vars.FIREBASE_PROJECTID}}
-          firebase_storageBucket: ${{vars.FIREBASE_STORAGEBUCKET}}
-          firebase_messagingSenderId: ${{vars.FIREBASE_MESSAGINGSENDERID}}
-          firebase_appId: ${{vars.FIREBASE_APPID}}
-          firebase_measurementId: ${{vars.FIREBASE_MEASUREMENTID}}
